# AxumVsGoBenchmark

./: BenchMark3.postman_collectionV2.1.json
axum_api/: Cargo.toml  benchmark.db
axum_api/entity/src/: mod.rs  prelude.rs  users.rs
axum_api/src/: db_initializer.rs  guard.rs  handler.rs  main.rs  models.rs
go_api/: benchmark.db  main.go  models.go
