[package]
name = "axum_api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity"]

[dependencies]
entity = { path = "entity" }
axum = "0.7.5"
rand = "0.9.0-alpha.2"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
sea-orm = { version = "1.0.0-rc.5", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }